--- a/index.html
+++ b/index.html
@@ -140,10 +140,10 @@
             <img src="images/profile-pic.jpg" alt="Profile Picture" />
 
             <p class="lead">
-              hi, my name is mustapha el mtarkati, i'm a student at ENS Rabat in
-              the professional license sector multimedia and web technology and
-              i'm a web developer i have many Experience with Designing and
-              creating a beautiful website
+              Hi, I'm Mustapha El Mtarkati. I hold a Professional Bachelor's degree 
+              in Multimedia and Web Technologies from ENS Rabat and work as a web developer. 
+              With ample experience, I specialize in designing and creating visually appealing 
+              websites.
             </p>
           </div>
         </div>
@@ -154,11 +154,12 @@
         <div class="col-six tab-full">
           <h3>Profile</h3>
           <p>
-            I graduated in multimedia and web design, I have a good command of
-            web development languages and technologies such as HTML , CSS,
-            JAVASCRIPT, PHP, sql, bootstrap, wordpress, jQuery, UI, UX, MYSQL. I
-            have an experience of 2 months in the field of computer graphics and
-            10 months in the web development sector
+            Multimedia and Web Professional with a Professional Bachelor's degree. 
+            Skilled in web design, development, and multimedia content creation. 
+            Practical experience in graphic design and full-stack development. 
+            Proficient in HTML, CSS, JavaScript, PHP,Ajax, ReactJs, Node.js, Laravel, WordPress, Bootstrap. 
+            Passionate about continuous learning and eager to contribute to innovative web 
+            and multimedia projects
           </p>
 
           <ul class="info-list">
@@ -176,7 +177,7 @@
             </li>
             <li>
               <strong>Job:</strong>
-              <span>Freelancer, full-stack Developer</span>
+              <span>Full-stack Developer</span>
             </li>
             <!-- <li>
               <strong>Website:</strong>
@@ -197,31 +198,35 @@
           <ul class="skill-bars">
             <li>
               <div class="progress percent90"><span>90%</span></div>
-              <strong>HTML5, CSS3, JS</strong>
+              <strong>Html, Css, Js, Php </strong>
             </li>
             <li>
-              <div class="progress percent70"><span>70%</span></div>
-              <strong>JQuery</strong>
+              <div class="progress percent80"><span>80%</span></div>
+              <strong>Bootstrap, Wordpress </strong>
             </li>
             <li>
-              <div class="progress percent95"><span>95%</span></div>
-              <strong>PHP</strong>
+              <div class="progress percent75"><span>70%</span></div>
+              <strong>Ajax, Jquery + Plugin </strong>
             </li>
             <li>
               <div class="progress percent85"><span>85%</span></div>
-              <strong>Laravel</strong>
+              <strong>Laravel, Nodejs, ReactJS</strong>
             </li>
             <li>
               <div class="progress percent75"><span>75%</span></div>
-              <strong>Wordpress</strong>
+              <strong>Mongodb, Sql, Blockchain</strong>
             </li>
             <li>
-              <div class="progress percent90"><span>90%</span></div>
-              <strong>Bootstrap</strong>
+              <div class="progress percent60"><span>60%</span></div>
+              <strong>Solidity, Web3.Js</strong>
             </li>
             <li>
               <div class="progress percent95"><span>95%</span></div>
               <strong>Webdesign</strong>
+            </li>
+            <li>
+              <div class="progress percent80"><span>80%</span></div>
+              <strong>Adobe Xd, Illustrator, Photoshop</strong>
             </li>
           </ul>
           <!-- /skill-bars -->
@@ -278,14 +283,13 @@
 
               <div class="timeline-header">
                 <h3>Front-end Developer</h3>
-                <p>October 2022 - Present</p>
+                <p>October 2022 - 2023</p>
               </div>
 
               <div class="timeline-content">
                 <h4>NourInfo</h4>
                 <p>
-                  Currently, I am a web developer at NourInfo, I have created
-                  many web applications using php in the first
+                  I collaborated with 'NourInfo' as a freelance full-stack developer. My role involved creating web applications using PHP and proficiently maintaining web applications built on the Laravel framework
                 </p>
               </div>
             </div>
@@ -351,14 +355,13 @@
 
               <div class="timeline-header">
                 <h3>professional license</h3>
-                <p>September 2022 - Present</p>
+                <p>September 2022 - 2023</p>
               </div>
 
               <div class="timeline-content">
                 <h4>ENS Rabat</h4>
                 <p>
-                  Currently, I am a student at ENS Rabat professional license
-                  cycle multimedia and web technology
+                  Holding a Professional Bachelor's degree in Multimedia and Web Technologies from ENS Rabat
                 </p>
               </div>
             </div>
@@ -453,7 +456,7 @@
                 <a href="#modal-02" class="overlay">
                   <div class="folio-item-table">
                     <div class="folio-item-cell">
-                      <h3 class="folio-title">AwasEnergy</h3>
+                      <h3 class="folio-title">Morocco Trust</h3>
                       <span class="folio-types"> Web Development </span>
                     </div>
                   </div>
@@ -526,7 +529,7 @@
 	            ============================================================= -->
             <div id="modal-01" class="popup-modal slider mfp-hide">
               <div class="media">
-                <img src="images/portfolio/modals/m-liberty.jpg" alt="" />
+                <img src="images/portfolio/liberty.jpg" alt="" />
               </div>
 
               <div class="description-box">
@@ -540,7 +543,7 @@
               </div>
 
               <div class="link-box">
-                <a href="https://fassipub.com/">View</a>
+                <a href="https://xd.adobe.com/view/53f0507f-32d8-42cc-a5e2-b63bacb24558-06a3/">View</a>
                 <a href="#" class="popup-modal-dismiss">Close</a>
               </div>
             </div>
@@ -548,21 +551,23 @@
 
             <div id="modal-02" class="popup-modal slider mfp-hide">
               <div class="media">
-                <img src="images/portfolio/modals/m-shutterbug.jpg" alt="" />
+                <img src="images/portfolio/shutterbug.jpg" alt="" />
               </div>
 
               <div class="description-box">
-                <h4>AwasEnergy</h4>
+                <h4>Morocco Trust</h4>
                 <p>
-                  awasEnergy is a website of the company awas energy, this site
-                  talks about this company and its services
+                  It is a blockchain-based web platform that enables the 
+                  verification of diplomas issued by the institution (such 
+                  as ENS Rabat) and also allows students from this 
+                  institution to obtain their diplomas in digital format
                 </p>
 
                 <div class="categories">Web Development</div>
               </div>
 
               <div class="link-box">
-                <a href="https://awas-energy.com/">View</a>
+                <a href="https://www.linkedin.com/posts/mustapha-el-mtarkati-88a221219_blockchaintechnology-educationrevolution-activity-7077073124600487936-z_5A?utm_source=share&utm_medium=member_desktop">View</a>
                 <a href="#" class="popup-modal-dismiss">Close</a>
               </div>
             </div>
@@ -570,7 +575,7 @@
 
             <div id="modal-03" class="popup-modal slider mfp-hide">
               <div class="media">
-                <img src="images/portfolio/modals/m-clouds.jpg" alt="" />
+                <img src="images/portfolio/clouds.jpg" alt="" />
               </div>
 
               <div class="description-box">
@@ -586,7 +591,7 @@
               </div>
 
               <div class="link-box">
-                <a href="https://awas-energy.com/vita/">View</a>
+                <a href="#">View</a>
                 <a href="#" class="popup-modal-dismiss">Close</a>
               </div>
             </div>
@@ -594,7 +599,7 @@
 
             <div id="modal-04" class="popup-modal slider mfp-hide">
               <div class="media">
-                <img src="images/portfolio/modals/m-beetle.jpg" alt="" />
+                <img src="images/portfolio/beetle.jpg" alt="" />
               </div>
 
               <div class="description-box">
@@ -617,7 +622,7 @@
 
             <div id="modal-05" class="popup-modal slider mfp-hide">
               <div class="media">
-                <img src="images/portfolio/modals/m-lighthouse.jpg" alt="" />
+                <img src="images/portfolio/lighthouse.jpg" alt="" />
               </div>
 
               <div class="description-box">
@@ -642,7 +647,7 @@
 
             <div id="modal-06" class="popup-modal slider mfp-hide">
               <div class="media">
-                <img src="images/portfolio/modals/m-salad.jpg" alt="" />
+                <img src="images/portfolio/salad.jpg" alt="" />
               </div>
 
               <div class="description-box">
